# VGAP

./: .env.example  .gitignore  README.md  alembic.ini  debug_admin.py  debug_internal.py  launcher_readme.md  pyproject.toml  runtime_monitor.sh  start_vgap.command  verify_schema.py
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.bioinformatics  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml  prometheus.yml  verify_tools.sh
docker/grafana/dashboards/: vgap-dashboard.json
docker/prometheus/: alerts.yml
docs/: admin-guide.md  developer-guide.md  runtime_monitor.md  user-guide.md
docs/audit/: dead_code_report.md  demo_removal_summary.md  documentation_sync_report.md  final_audit_report.md  integration_map.json  no_core_modification_attestation.md  qa_final_report.md  release_audit_report.md  report_generation_flow.md  system_audit_report.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  ParameterPanel.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Admin.tsx  CreateRun.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Maintenance.tsx  Reports.tsx  RunDetail.tsx  Runs.tsx
frontend/src/utils/: api.ts
scripts/: deploy-dev.sh  deploy-prod.sh  verify-reproducibility.sh
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: test_pipeline.py  test_pipeline_params.py
tests/regression/: test_regression.py
tests/unit/: test_api.py  test_cleanup.py  test_parameters.py  test_provenance.py  test_validators.py
vgap/: __init__.py  config.py  worker.py
vgap/api/: __init__.py  main.py  schemas.py
vgap/api/routes/: __init__.py  admin.py  auth.py  maintenance.py  reports.py  runs.py  samples.py  upload.py
vgap/api/schemas/: __init__.py  parameters.py
vgap/migrations/: env.py
vgap/migrations/versions/: 701f312207a8_initial_migration.py  add_run_parameters.py
vgap/models/: __init__.py
vgap/pipeline/: __init__.py  assembly.py  comparative.py  influenza.py  lineage.py  mapping.py  pdf_export.py  phylogeny.py  qc.py  reporting.py  treetime.py  variants.py  visualizations.py
vgap/services/: __init__.py  cleanup_manager.py  database.py  maintenance.py  pipeline.py  reference_manager.py  run_service.py  tasks.py  upload.py  user_service.py
vgap/tasks/: __init__.py  maintenance.py
vgap/utils/: __init__.py  provenance.py
vgap/validators/: __init__.py  preflight.py
