[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vgap"
version = "0.1.0"
description = "Viral Genomics Analysis Platform - Production-grade pipeline for respiratory virus analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "VGAP Development Team" }
]
keywords = ["bioinformatics", "viral-genomics", "sars-cov-2", "influenza", "phylogenetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    
    # Task Queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "flower>=2.0.1",
    
    # Data Processing
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "biopython>=1.83",
    "pysam>=0.22.0",
    
    # Validation & Serialization
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "httpx>=0.26.0",
    
    # Monitoring
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    
    # Reporting
    "jinja2>=3.1.3",
    "plotly>=5.18.0",
    "weasyprint>=60.2",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "tenacity>=8.2.3",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.1.13",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "factory-boy>=3.3.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.4",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
vgap = "vgap.cli:app"
vgap-worker = "vgap.worker:main"

[project.urls]
Homepage = "https://github.com/vgap/vgap"
Documentation = "https://vgap.readthedocs.io"
Repository = "https://github.com/vgap/vgap"

[tool.hatch.build.targets.wheel]
packages = ["vgap"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
